# rust_dataflash_parser

./: .cargoignore  .gitignore  AGENTS.md  CHANGELOG.md  COMMITS.md  Cargo.toml  LICENSE  README.md  benchmark_js.mjs  benchmark_parsers.py  download_dataflash_logs.py  index.html
.github/workflows/: ci.yml  deploy.yml  release.yml
assets/: index-B0kq5qOe.js  index-Ceo4N2ol.js  index-CgfJ5qMm.js  index-Co95YtsV.js  index-CpQBXRVq.js  index-yoE6165x.css  parser_wasm_bg-BRRQZ3Ch.wasm  parser_wasm_bg-C1A6e_q4.wasm  parser_wasm_bg-CEOBWCm0.wasm  parser_wasm_bg-Dn7TEs10.wasm
fuzz/: Cargo.toml
fuzz/fuzz_targets/: df_scan.rs  parse_type.rs
src/: error.rs  format.rs  lib.rs  main.rs  mode.rs  parser.rs  session.rs  time.rs  types.rs
src/export/: json.rs
tests/: integration.rs  js_parity.rs  parsing_robustness.rs
tests/common/: log_builder.rs  mod.rs
viewer/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.base.json  vite.config.ts
viewer/apps/desktop/: index.html  package.json  vite.config.ts
viewer/apps/web/: package.json  tsconfig.json  vite.config.ts
viewer/parser-wasm/: Cargo.toml
viewer/parser-wasm/src/: lib.rs
viewer/scripts/: extract-presets.mjs
viewer/src/: App.tsx  main.tsx  styles.css
viewer/src/components/: AppShell.tsx  AttitudeWidget.tsx  FileOpenPanel.tsx  MapView.tsx  MessageTree.tsx  MorePanel.tsx  PanelSplitter.tsx  PlotChart.tsx  PresetTree.tsx
viewer/src/hooks/: useFieldSeries.ts  useFlightModes.ts
viewer/src/lib/: createStore.ts  csvExport.ts  decimate.ts  fieldSeriesKey.ts  flightModes.ts  gpsSource.ts  plotFieldLoader.ts  plotFormat.ts  plotPresets.ts  plotPresetsData.ts  seriesValues.ts  sessionReset.ts
viewer/src/platform/: index.ts  mock.ts  types.ts  wasm.ts
(+16 files in other folders)
