[package]
name = "rust_dataflash_parser"
version = "0.2.0"
edition = "2024"
description = "Fast Rust parser for ArduPilot dataflash (.BIN) logs"
license = "MIT"
repository = "https://github.com/HatemslaH/rust_dataflash_parser"
readme = "README.md"
keywords = ["ardupilot", "dataflash", "parser", "flight-log"]
categories = ["parser-implementations", "aerospace"]

[lib]
name = "rust_dataflash_parser"
path = "src/lib.rs"

[[bin]]
name = "rust_dataflash_parser"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
rayon = { version = "1", optional = true }
base64 = "0.22"

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dev-dependencies]
proptest = "1"
serde_json = "1"
